<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background_all">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/background_visor_and_number"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:gravity="end|bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_seven"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_eight"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_nine"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_divide"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_four"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_five"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_six"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnMult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_mult"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_one"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_two"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_three"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_sum"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_zero"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_clear"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_sub"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/button_equal"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

</LinearLayout>